# easy-dataset-cli

./: .SourceSageignore  .env.example  .gitignore  README.md  fix_xml_generation.py  pyproject.toml
easy_dataset_cli/: __init__.py  alpaca_converter.py  batch_process.py  commands.py  core.py  file_utils.py  ga_parser.py  main.py  prompts.py  qa_generator.py  text_splitter.py  utils.py  xml_utils.py
easy_dataset_cli/generators/: __init__.py  ga_generator.py  qa_generator.py  qa_generator_fulltext.py  qa_generator_thinking.py
easy_dataset_cli/prompts/: ga_definition_generation.md  qa_generation.md  qa_generation_with_fulltext.md  qa_generation_with_thinking.md
easy_dataset_cli/prompts/ga/: ga_definition_generation.md
easy_dataset_cli/prompts/qa/: qa_generation.md  qa_generation_with_fulltext.md  qa_generation_with_surrounding.md  qa_generation_with_thinking.md
example/input/documents/: Touhou_Chireiden.md  sample_document.txt  sample_ga_definition.md  test_short.md
example/output/: ga-definitions.md  ga_definitions.md
example/scripts/: orin.bat  simple.bat  test_all_commands.sh
tests/: test_aggregate_logs.py  test_answer_extraction.py  test_fixed_parsing.py  test_simple_xml.py  test_subelement.py  test_think_tag_preservation.py  test_xml_parsing.py
