[project]
name = "easy-dataset-cli"
version = "1.0.0"
description = "A simple CLI tool to generate QA pairs from a text file using LLMs and GA pairs, outputting genre-specific XML files."
dependencies = [
    "typer[all]",          # CLIフレームワーク
    "rich",                # リッチなコンソール出力
    "litellm",             # LLM連携ライブラリ
    "langchain-text-splitters", # テキスト分割用
    "mistune",             # マークダウン解析用ライブラリ
    "python-dotenv"        # .env ファイル読み込み用
]

[project.scripts]
# "easy-dataset" コマンドで "easy_dataset_cli.main:app" を実行するよう設定
easy-dataset = "easy_dataset_cli.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"